# upper_pkg_gene

./: .gitignore  README.md  how_to_run.md  how_to_test.md
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: CustomJointState.msg  KeyInfo.msg
src/upper_momentum_compensator/: CMakeLists.txt  package.xml
src/upper_momentum_compensator/config/: upper_momentum_params.yaml
src/upper_momentum_compensator/include/upper_momentum_compensator/: ArmCommandGenerator.hpp  Kinematics.h  MomentumCompensator.hpp  SafetyFilter.hpp  StateSynchronizer.hpp  UpperMomentumCompensatorNode.hpp  WholeBodyState.hpp
src/upper_momentum_compensator/launch/: upper_momentum_compensator.launch.py
src/upper_momentum_compensator/src/: ArmCommandGenerator.cpp  Kinematics.cpp  MomentumCompensator.cpp  SafetyFilter.cpp  StateSynchronizer.cpp  UpperMomentumCompensatorNode.cpp  upper_momentum_compensator_node.cpp
src/upper_motor_bridge/: CMakeLists.txt  package.xml
src/upper_motor_bridge/include/upper_motor_bridge/: SharedMemoryTypes.hpp  UpperMotorBridgeNode.hpp
src/upper_motor_bridge/launch/: upper_motor_bridge.launch.py
src/upper_motor_bridge/msg/: UpperMotorCommand.msg  UpperMotorState.msg
src/upper_motor_bridge/src/: UpperMotorBridgeNode.cpp  upper_motor_bridge_node.cpp
src/upper_motor_test/: CMakeLists.txt  README.md  package.xml
src/upper_motor_test/launch/: upper_motor_test.launch.py  whole_body_visualize.launch.py
src/upper_motor_test/rviz/: whole_body.rviz
src/upper_motor_test/src/: humanoid_pseudo.cpp  lower_humanoid_pseudo.cpp  lower_sine_test_node.cpp  upper_data_recorder.py  upper_sine_test_node.cpp  wholebody_data_recorder.py
src/upper_motor_test/urdf/: wholebody_4_dof_arm_20deg_with_head_RL.urdf
src/upper_motor_test/urdf/meshes/: L_EE.STL  L_elbow.STL  L_shoulder_pitch.STL  L_shoulder_roll.STL  L_shoulder_yaw.STL  L_toe.STL  Pelvis.STL  R_EE.STL  R_elbow.STL  R_shoulder_pitch.STL  R_shoulder_roll.STL  R_shoulder_yaw.STL  R_toe.STL  Torso.STL
src/upper_payload_hold_controller/: CMakeLists.txt  package.xml
src/upper_payload_hold_controller/config/: payload_hold.yaml  payload_hold_left_arm.yaml
src/upper_payload_hold_controller/include/upper_payload_hold_controller/: PayloadHoldNode.hpp
src/upper_payload_hold_controller/launch/: payload_hold.launch.py  payload_hold_left_arm.launch.py
src/upper_payload_hold_controller/src/: PayloadHoldNode.cpp  main.cpp
