<?xml version="1.0"?>
<package format="3">
  <name>upper_momentum_compensator</name>
  <version>0.0.1</version>
  <description>Upper-body momentum compensation controller using upper and lower joint states.</description>
  <maintainer email="anh@example.com">Anh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>upper_motor_bridge</depend>
  <depend>vectornav_msgs</depend>
  <depend>interfaces</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
