<?xml version="1.0"?>
<package format="3">
  <name>upper_payload_hold_controller</name>
  <version>0.1.0</version>
  <description>Upper-body payload hold controller using joint-space impedance and adaptive tau_ff.</description>

  <maintainer email="user@example.com">Hoang Anh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>interfaces</depend>
  <depend>upper_motor_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>